modified:   src/css/app.less 	modified:   src/js/routes.js 	modified:   src/js/store.js 	modified:   src/pages/expense-list.f7 	new file:   src/pages/expense.f7 	deleted:    src/pages/product.f7 	modified:   src/pages/profile.f7 	modified:   src/pages/registry-list.f7 	new file:   src/pages/registry.f7

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -170,3 +170,75 @@
     width: 300px;
   }
 }
+
+.btn-circle {
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--black2);
+}
+
+.btn-edit:hover {
+  background: #002330;
+}
+
+.btn-edit .f7-icons {
+  color: #00ace9;
+  font-size: 22px;
+}
+
+.btn-del:hover {
+  background: #441510;
+}
+
+.btn-del .f7-icons {
+  color: #d44232;
+  font-size: 22px;
+
+}
+
+.registry-status {
+  width: 70px;
+}
+
+.registry-status.OPPENED {
+  background: #ff2c15;
+}
+
+.registry-status.CLOSED {
+  background: var(--green);
+}
+
+.registry-item-title {
+  font-size: 14px;
+}
+
+.block-title.categories {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 1px solid var(--black3);
+  padding-top: 30px;
+}
+
+.btn-add {
+  border-radius: 50%;
+  padding: 2px;
+}
+.btn-add:active {
+  background: #404040;
+  color: #829708;
+}
+
+.button.button-fill:hover {
+  color: var(--black)
+}
+
+.button.button-fill:active {
+  background: #829708;
+  color: var(--black)
+}
