--- a/src/css/app.less
+++ b/src/css/app.less
@@ -173,17 +173,18 @@
 
 
 
-
+.item-inner.item-title {
+  color: #fff;
+}
 
 .registry-status {
   width: 70px;
 }
 
-.registry-status.OPPENED {
+.OPPENED {
   background: #ff2c15;
 }
-
-.registry-status.CLOSED {
+.CLOSED {
   background: var(--green);
 }
 
@@ -259,4 +260,9 @@
 
 .navbar .btn-edit {
   color: #00ace9;
+}
+
+.item-span {
+  font-size: 14px;
+  color: #9e9e9e;
 }
