updating profile registry and init of expenses

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -171,7 +171,12 @@
   }
 }
 
-
+.item-link .category {
+  background: red;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
 
 .item-inner.item-title {
   color: #fff;
